# consciousness_analyzer

./: ConsciousnessNavigator.ipynb  README.md  Untitled.ipynb  analyze_clusters.py  analyze_user.py  clean_memes.py  cluster_analysis_notebook.py  consciousness_indicators_unknown.json  download_and_analyze.py  example_notebook.py  hello.py  pyproject.toml  run_community_analysis.py  test_downloader.py
consciousness_analysis/: __init__.py  main.py
consciousness_clusters/: analysis_summary.json  cluster_analysis_summary.json  consciousness_clusters.csv  consciousness_communities.csv  consciousness_matrix.csv  education_awareness_tweets.csv  education_liberation_tweets.csv  education_pattern_tweets.csv  employment_awareness_tweets.csv  employment_battle_tweets.csv  employment_liberation_tweets.csv  employment_pattern_tweets.csv  employment_solution_tweets.csv  financial_awareness_tweets.csv  financial_battle_tweets.csv  financial_liberation_tweets.csv  financial_pattern_tweets.csv  financial_solution_tweets.csv  government_awareness_tweets.csv  government_battle_tweets.csv  government_liberation_tweets.csv  government_pattern_tweets.csv  healthcare_awareness_tweets.csv  healthcare_battle_tweets.csv  healthcare_liberation_tweets.csv  healthcare_pattern_tweets.csv  healthcare_solution_tweets.csv  navigator_overlaps.csv
user_profiles/: DefenderOfBasic_profile.json  DefenderOfBasic_report.md  DefenderOfBasic_training_data.csv  DefenderOfBasic_training_data.jsonl  leo_guinan_profile.json  leo_guinan_report.md  leo_guinan_training_data.csv  leo_guinan_training_data.jsonl
(+17 files in other folders)
