[project]
name = "consciousness-measure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "supabase>=2.19.0",
    "textblob>=0.19.0",
]
